--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,7 @@
     <meta charset="utf-8">
     <title>Force-graph</title>
     <link rel="stylesheet" href="style.css">
-    <script
-      src="https://code.jquery.com/jquery-2.2.4.min.js"
-      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-      crossorigin="anonymous"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script type='text/javascript' src="https://code.jquery.com/ui/1.11.0/jquery-ui.min.js"> </script>
-    <script type='text/javascript' src="https://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> </script>
+    <script src="d3.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -26,6 +20,13 @@
       </div>
       <svg width="1000" height="900"></svg>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-2.2.4.min.js"
+      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+      crossorigin="anonymous">
+    </script>
+    <script type='text/javascript' src="https://code.jquery.com/ui/1.11.0/jquery-ui.min.js"> </script>
+    <script type='text/javascript' src="https://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> </script>
     <script src="main.js"></script>
   </body>
 </html>
